--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,86 @@
 // Main Sass File
+body {
+    background-color: rgb(235, 235, 235);
+}
+
+
+.bg-transp-dark-rounded {
+    color: rgb(255, 255, 255);
+    background-color: rgba(3, 3, 3, 0.623);
+    border: 10px solid rgba(255, 255, 255, 0);
+    border-radius: 10px;
+}
+
+// NAVIGACIJA START ******************************
+nav {
+    .nav-link {
+        margin-left: 20px;
+        margin-right: 20px;
+
+        font-size: 1rem;
+        font-weight: bold;
+    }
+}
+// NAVIGACIJA END ******************************
+
+// FIRST SECTION START ******************************
+.first-section {
+    height: 80vh;
+    background-image: url("../img/cover.jpeg");
+    background-size: cover;
+
+    .first-section-column {
+        height: 80vh;
+    }
+
+    .form-control {
+        width: 50%;
+    }
+    .btn {
+        width: 25%;
+    }
+    
+    h1 {
+        font-family: "Arial Black", Gadget, sans-serif;
+        font-size: 3rem;
+    }
+   
+}
+// FIRST SECTION END ******************************
+
+// FEATURES SECTION START ******************************
+.features-section {
+        
+        color: #06739e;
+    .feature-row {
+        margin-top: 7%;
+    }
+    
+       i {
+        font-size: 4rem;
+        margin-bottom: 20px;
+    }
+}
+// FEATURES SECTION END ******************************
+
+// REPAIR SECTION START ******************************
+.repair-pic-container {
+    height: 80vh;
+
+    color: #dadada;
+
+    background-image: url("../img/repair.jpeg");
+    background-size: cover;
+    background-attachment: fixed; 
+
+    .repair-section-text-container {
+        height: 80vh;
+    }
+
+    li {
+        
+        font-size: 1.3rem;
+    }
+
+}
+// REPAIR SECTION END ******************************
